@@ -217,10 +217,12 @@ static void print_events(void)
         printf("# Support for multiple mice not enabled\n");
     }
 
-    printf("# SDL_Init(SDL_INIT_JOYSTICK | SDL_INIT_EVENTS))\n");
+    // With recent SDL2 versions (SDL 2.0.14+?), it seems that the video
+    // subsystem must be initialized to get events from xinput controllers.
+    printf("# SDL_Init(SDL_INIT_EVERYTHING)\n");
     flush_stdout();
-    if (SDL_Init(SDL_INIT_JOYSTICK | SDL_INIT_EVENTS) < 0) {
-        printf("# SDL_Init(SDL_INIT_JOYSTICK | SDL_INIT_EVENTS)) < 0\n");
+    if (SDL_Init(SDL_INIT_EVERYTHING) < 0) {
+        printf("# SDL_Init(SDL_INIT_EVERYTHING) < 0\n");
         flush_stdout();
         return;
     }
@@ -314,7 +316,6 @@ static void print_events(void)
 
 static void print_state(SDL_Joystick* joystick, const char* name)
 {
-
     int num_buttons = SDL_JoystickNumButtons(joystick);
     int num_hats = SDL_JoystickNumHats(joystick);
     int num_axes = SDL_JoystickNumAxes(joystick);
@@ -397,9 +398,12 @@ int main(int argc, char* argv[])
 
     char* compare_name = joystick_config_name(argv[1], 1);
 
-    printf("# SDL_Init(SDL_INIT_JOYSTICK)\n");
-    if (SDL_Init(SDL_INIT_JOYSTICK) < 0) {
-        printf("# SDL_Init(SDL_INIT_JOYSTICK) < 0\n");
+    // With recent SDL2 versions (SDL 2.0.14+?), it seems that the video
+    // subsystem must be initialized to get events from xinput controllers.
+    printf("# SDL_Init(SDL_INIT_EVERYTHING)\n");
+    flush_stdout();
+    if (SDL_Init(SDL_INIT_EVERYTHING) < 0) {
+        printf("# SDL_Init(SDL_INIT_EVERYTHING) < 0\n");
         flush_stdout();
         return 2;
     }
