@@ -1,5 +1,6 @@
 Version 3.1:
 
+* Fix device helper for xinput devices with recent SDL2 versions.
 * Support for multiple mice disabled by default on macOS due to security
   warning. Use option multiple_mice = 1 to enable.
 * Disable expect_version option (no longer synchronized with launcher).
